# book-reader

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  README.md  index.html  install.ps1  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  run.py  test.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy-docs.yml  docker_publish.yml  integration_tests.yml  lint_format.yml  test.yml
api/: index.html
api/models/: index.html
api/repositories/: index.html
api/services/: index.html
api/utils/: index.html
configuration/: index.html
contributing/: index.html
docs/: configuration.md  contributing.md  index.md  installation.md  usage.md
docs/api/: index.md  models.md  repositories.md  services.md  utils.md
installation/: index.html
integration_tests/: README.md  conftest.py  create_samples.py  run_integration_tests.py  test_end_to_end.py
search/: search_index.json
src/book_reader/: __init__.py  __main__.py
src/book_reader/cli/: __init__.py  app.py
src/book_reader/config/: audio_config.py  settings.py
src/book_reader/models/: __init__.py  pdf_document.py
src/book_reader/models/base/: __init__.py  document.py
src/book_reader/models/formats/: __init__.py  epub_document.py  pdf_document.py  text_document.py
src/book_reader/repositories/: __init__.py  document_factory.py  pdf_repository.py
src/book_reader/repositories/base/: __init__.py  base_repository.py
src/book_reader/repositories/providers/: __init__.py  epub_repository.py  pdf_repository.py  text_repository.py
src/book_reader/services/: __init__.py  conversion_service.py  tts_service.py
src/book_reader/utils/: __init__.py  console.py  logging.py  text_processing.py
tests/: __init__.py  conftest.py
tests/cli/: test_app.py
tests/integration/: README.md  __init__.py  conftest.py  create_samples.py  run_integration_tests.py  test_end_to_end.py
tests/models/: __init__.py  test_audio_config.py
tests/repositories/: __init__.py  test_pdf_repository.py
tests/services/: test_conversion_service.py  test_tts_service.py
tests/utils/: __init__.py  test_text_processing.py
usage/: index.html
